# data-collector

./: .gitignore  README.md  data_collector.py  pyproject.toml
.github/workflows/: python-ci.yml
